# DDPlayTV

./: .editorconfig  .gitignore  AGENTS.md  AndroidManifest.xml  BUGLY_CONFIG.md  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  lint.xml  local.properties.template  settings.gradle.kts
.github/workflows/: module-dependency-governance.yml  package-beta.yml  package-release.yml
TODOs/: FontResearch.md  Todos.md  bilibili.md  bilibili_live_danmaku.md  bilibili_pgc_playback.md  bilibili_playback_align_piliplus.md  bilibili_风控优化方案.md  common_component_拆分设计方案.md  libmpv-soft-decode-plan.md  logging-review.md  module_dependency_governance.md  mpv.md  opencc_ass.md  player_kernel_bilibili_coupling_analysis.md  player_storage_playback_addon_design.md  tv_phone_ui_interaction_optimization_plan.md  媒体库级别播放器配置设计方案.md  架构审计与重构路线图.md
anime_component/: build.gradle.kts
anime_component/src/main/: AndroidManifest.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
bilibili_component/: build.gradle.kts  proguard-rules.pro
buildSrc/: build.gradle.kts
change/: dandanplay-v4.1.3.txt  dandanplay-v4.2.0.txt
common_component/: build.gradle.kts
common_component/src/main/: AndroidManifest.xml
core_contract_component/: build.gradle.kts  proguard-rules.pro
core_database_component/: build.gradle.kts  proguard-rules.pro
core_database_component/src/main/: AndroidManifest.xml
core_log_component/: build.gradle.kts  proguard-rules.pro
core_network_component/: build.gradle.kts
core_storage_component/: build.gradle.kts
core_system_component/: build.gradle.kts  proguard-rules.pro
core_system_component/src/main/: AndroidManifest.xml
core_ui_component/: build.gradle.kts  proguard-rules.pro
data_component/: build.gradle.kts
document/: Contributing.md  FontResearch.md  Media3-HW-Decoding-Strategy.md  Privacy policy.md  README.md  TV-Remote-Player-Optimization.md  Third_Party_Libraries.md  mpv-build-notes.md  mpv_conf_supported_options.md  tv-adaptation.md  弹幕开放平台凭证注入.md
document/architecture/: architecture_governance_guardrails.md  legacy_pager_api_baseline.tsv  module_dependencies_snapshot.json  module_dependencies_snapshot.md  module_dependency_governance.md  module_layering_v2.md
document/monitoring/: logging-system.md  media3-stability.md  media3-telemetry.md
document/release-notes/: 001-libass-gpu-render.md  media3-migration.md
document/support/: bilibili-follow-live-library.md  bilibili-live-playback.md  media3-playback-support.md  media3-ticket-dashboard.md  mpv-115-proxy.md
documents/: mpv_conf_supported_options.md
gradle/assemble/: dandanplay.jks.gpg
gradle/wrapper/: gradle-wrapper.properties
local_component/: build.gradle.kts
local_component/src/main/: AndroidManifest.xml
openspec/: project.md
openspec/changes/add-bilibili-follow-live-folder/: design.md  proposal.md  tasks.md
openspec/changes/add-mpv-ass-full-subtitle-bridge/: tasks.md
openspec/changes/refactor-architecture-governance/: tasks.md
openspec/changes/refactor-libass-gpu-pipeline/: tasks.md
openspec/changes/refactor-route-and-media3-session-service/: design.md  proposal.md  tasks.md
openspec/changes/update-media-library-config-auto-apply/: proposal.md  tasks.md
openspec/changes/update-tv-danmaku-line-limit-ui/: design.md  proposal.md  tasks.md
openspec/specs/architecture-governance/: spec.md
openspec/specs/bilibili-follow-live-library/: spec.md
openspec/specs/media-library-config-auto-apply/: spec.md
openspec/specs/subtitle-libass-gpu-pipeline/: spec.md
player_component/: build.gradle.kts  proguard-rules.pro
player_component/src/main/: AndroidManifest.xml
player_component/src/main/cpp/: CMakeLists.txt  ass_gpu_bridge.cpp  libass_bridge.cpp  libass_bridge.h  mpv_bridge.cpp
repository/danmaku/: build.gradle.kts
repository/immersion_bar/: build.gradle.kts
repository/panel_switch/: build.gradle.kts
repository/seven_zip/: build.gradle.kts
repository/thunder/: build.gradle.kts
repository/video_cache/: build.gradle.kts
scripts/: module_deps_snapshot.py
specs/000-add-libass-backend/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/000-add-libass-backend/checklists/: overlay-gesture-validation.md
specs/001-115-open-storage/: 115-open-openapi.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-115-open-storage/checklists/: acceptance.md  requirements.md
specs/001-115-open-storage/contracts/: 115-open-openapi.yaml
specs/001-add-libass-backend/: plan.md  quickstart.md  spec.md  tasks.md
specs/001-add-libass-backend/checklists/: requirements.md  support-matrix.md
specs/001-add-libass-backend/contracts/: openapi.yaml
specs/001-baidu-pan-storage/: baidu-pan-openapi.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-baidu-pan-storage/checklists/: acceptance.md  (+1 more)
specs/001-libass-gpu-render/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-logging-redesign/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-migrate-media3/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mpv-player-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-add-bilibili-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
storage_component/: build.gradle.kts
user_component/: build.gradle.kts
(+1389 files in other folders)
